--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.3",
     "morgan": "^1.10.1",
+    "resend": "^6.4.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
