--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^8.19.3",
     "morgan": "^1.10.1",
     "resend": "^6.4.2",
+    "uploadthing": "^7.7.4",
     "zod": "^4.1.12"
   },
   "devDependencies": {
