--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@uploadcare/rest-client": "^6.18.0",
+    "@uploadcare/signed-uploads": "^6.18.0",
     "bcrypt": "^6.0.0",
     "chalk": "^5.6.2",
     "cookie-parser": "^1.4.7",
@@ -20,7 +22,6 @@
     "mongoose": "^8.19.3",
     "morgan": "^1.10.1",
     "resend": "^6.4.2",
-    "uploadthing": "^7.7.4",
     "zod": "^4.1.12"
   },
   "devDependencies": {
