Session and location update 🚀

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,7 +9,11 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "outDir": "./build",
-    "baseUrl": "."
+    "baseUrl": "./src",
+    "paths": {
+      "@/*": ["*"],
+      "src/*": ["*"]
+    }
   },
   "include": ["src"]
 }
