--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,11 @@
   "description": "",
   "license": "ISC",
   "author": "Goran Kitic",
-  "type": "module",
   "main": "index.ts",
   "scripts": {
-    "dev": "node --import=tsx --env-file=.env --watch src/index.ts",
-    "start": "node build/index.js",
-    "build": "tsc"
+    "dev": "tsx --watch --env-file=.env -r tsconfig-paths/register src/index.ts",
+    "build": "tsc && tsc-alias",
+    "start": "node build/index.js"
   },
   "dependencies": {
     "@uploadcare/rest-client": "^6.18.0",
@@ -18,6 +17,7 @@
     "chalk": "^5.6.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
@@ -37,6 +37,9 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/morgan": "^1.9.10",
+    "@types/node": "^24.10.1",
+    "tsc-alias": "^1.8.16",
+    "tsconfig-paths": "^4.2.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
